better error handling

--- a/Random User Example/Random User Example/en.lproj/Localizable.strings
+++ b/Random User Example/Random User Example/en.lproj/Localizable.strings
@@ -8,3 +8,6 @@
 
 "usersTitle" = "Random Users";
 "userDetailTitle" = "User Details";
+"errorTitle" = "ERROR";
+"errorMessage" = "Please try again";
+"tryAgain" = "Try Again";
