--- a/Random User Example/Random User Example/es.lproj/Localizable.strings
+++ b/Random User Example/Random User Example/es.lproj/Localizable.strings
@@ -8,3 +8,6 @@
 
 "usersTitle" = "Usuarios Aleatorios";
 "userDetailTitle" = "Detalle del Usuario";
+"errorTitle" = "ERROR";
+"errorMessage" = "Por favor intente nuevamente";
+"tryAgain" = "Reintentar";
